# Carboy

./: Cargo.toml
src/: auth.rs  components.rs  hooks.rs  main.rs  routes.rs
src/lib/server/db/queries/: vehicle.ts
src/lib/server/db/schema/postgres/: 0007_one_open_trip_per_vehicle.sql
src/routes/: VehicleCard.svelte
src/routes/checkout/[vehicleNumber]/: checkout.remote.ts
